# phd-codes

./: .gitignore  .gitmodules  README.md
implementing/: dq_1.m  preamble.m  rosi_control_dq_kin_1.m
implementing/control/: rosi_dqlib_kin_1.m
implementing/fkin/: fkin.m  fkin_online.m  fkin_online.m~  fkin_static.m
implementing/fkin/lib/: dq_joint_rot.m  dq_rosi_fkin.m  q_extract_angle_n_director.m  q_extract_pos_error_norm.m
implementing/fkin_diff/: fkin_vel_online.m
implementing/leveler/: attitude_error.m  attitude_error_2.m  leveler.m  logger.m  torque_control.m
implementing/leveler/lib/: get_attitude_error.m  get_dq_frame_x_aligned.m  get_lever_vertical.m  remove_yaw.m  rosi_clip_lever_pos.m  rosi_correct_joints_signal.m  rosi_mount_arms_pos_msg.m  sig.m  treat_imu_data.m  vector_projection.m
implementing/leveler/res/: 20210713T182743_rampa_pitch_ctrl_eps.eps  20210713T182743_rampa_pitch_ctrl_fig.fig  20210713T183150_rampa_roll_ctrl_eps.eps  20210713T183150_rampa_roll_ctrl_fig.fig  20210713T185014_rampa_campinho_ctrl_eps.eps  20210713T185014_rampa_campinho_ctrl_fig.fig  20210713T213118_rampa_campinho_ctrl_eps.eps  20210713T213118_rampa_campinho_ctrl_fig.fig  20210714T110715_rampa_campinho_ctrl_eps.eps  20210714T110715_rampa_campinho_ctrl_fig.fig  20210716T161618_rampa_diagonal_01_eps.eps  20210716T161618_rampa_diagonal_01_fig.fig
implementing/lib/dq/: DualQuaternion.m  DualQuaternion.m~  dq2dqmat.m  main_studyDualQuaternions.m  main_test_DualQuaternionClass.m  main_test_DualQuaternionClass.m~
implementing/lib/ros/: pub_rosi_cmd.m  ros_retrieve_dq.m  ros_retrieve_joints.m  ros_retrieve_joints_stack.m  ros_retrieve_mani_joints.m  ros_retrieve_pos_mani_joints.m  ros_retrieve_pose.m  ros_retrieve_pose.m~  ros_send_robot_cmd_vel.m  rosi_ros_topic_info.m
implementing/modelling/: model_dq_1.mat  rosi_control_1.m  rosi_dq_1.m  rosi_dq_model.m  rosi_dqlib_model.m
implementing/modelling/lib/: dq_relative_pose.m  get_joint_screw.m  ros_gentle_init.m  ros_retrieve_joints.m
implementing/vel/: fkin_vel_online.m  fkin_vel_online_debug.m  fkin_vel_online_debug_j1.m
matlab/lib/plot/: plot_control.m
prototyping/dq-robotics/: control.m  control_serialManipulator.m
prototyping/dq-robotics/lib/: constraint_jacobian_custom.m  teleoperate_differential_drive_robot.m
prototyping/matlab-ros/: fcn_callback_example.m  main.m~
prototyping/quaternions/DualQuaternion/: CMakeLists.txt  DualQuaternion.cpp  DualQuaternion.h  dualquaternion.cpp  dualquaternion.h  main_test.cpp
prototyping/quaternions/DualQuaternion/test/: CMakeLists.txt  main_test.cpp
prototyping/quaternions/Quaternion/: CMakeLists.txt  Quaternion.cpp  Quaternion.h  teste.cpp
prototyping/quaternions/Quaternion/test/: CMakeLists.txt  test_main.cpp  teste.cpp
prototyping/quaternions/cpp_classTest/: DualQuaternion_c.cpp  DualQuaternion_c.h
studying/dq-robotics/: control_wholeBody.m  receive_pose_from_ros.m
studying/dual_quaternion/: ComposingRotationsViaHamiltonTurns-author.nb
studying/fourier/: main.m
studying/matlab-ros/: fcn_publisher.m  fcn_service.m  main.m
(+27 files in other folders)
